--- a/web-deployments.yaml
+++ b/web-deployments.yaml
@@ -29,4 +29,4 @@ spec:
         - name: DBPORT
           value: "3306"
         - name: APP_COLOR
-          value: "green" # Or any other supported color
+          value: "pink" # Or any other supported color
